--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,20 +5,35 @@ on:
   pull_request:
 
 jobs:
-  windows:
-    runs-on: windows-latest
+  tests:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [windows-latest, ubuntu-latest, macos-latest]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Configure
+      - name: Configure (Windows)
+        if: runner.os == 'Windows'
         shell: pwsh
         run: cmake -S . -B build
 
-      - name: Build
+      - name: Configure (Unix)
+        if: runner.os != 'Windows'
+        shell: pwsh
+        run: cmake -S . -B build -DCMAKE_BUILD_TYPE=Debug
+
+      - name: Build (Windows)
+        if: runner.os == 'Windows'
         shell: pwsh
         run: cmake --build build --config Debug
 
+      - name: Build (Unix)
+        if: runner.os != 'Windows'
+        shell: pwsh
+        run: cmake --build build
+
       - name: Run tests
         shell: pwsh
-        run: .\scripts\run-tests.ps1
+        run: ./scripts/run-tests.ps1
