--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,5 +38,11 @@ target_include_directories(erkao PRIVATE
 if(WIN32)
   target_link_libraries(erkao winhttp)
 else()
-  target_link_libraries(erkao dl m)
+  find_package(CURL REQUIRED)
+  if(TARGET CURL::libcurl)
+    target_link_libraries(erkao dl m CURL::libcurl)
+  else()
+    target_include_directories(erkao PRIVATE ${CURL_INCLUDE_DIRS})
+    target_link_libraries(erkao dl m ${CURL_LIBRARIES})
+  endif()
 endif()
