feat: delete python http server and use erkao's one

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ target_include_directories(erkao PRIVATE
 )
 
 if(WIN32)
-  target_link_libraries(erkao winhttp)
+  target_link_libraries(erkao winhttp ws2_32)
 else()
   find_package(CURL REQUIRED)
   if(TARGET CURL::libcurl)
