feat: improve graphics + add auto install vcpkg

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,15 @@ target_include_directories(erkao PRIVATE
 )
 
 if(ERKAO_GRAPHICS)
+  if(WIN32)
+    if(DEFINED ENV{MINGW_PREFIX} AND EXISTS "$ENV{MINGW_PREFIX}")
+      list(FIND CMAKE_PREFIX_PATH "$ENV{MINGW_PREFIX}" _erkao_mingw_prefix_index)
+      if(_erkao_mingw_prefix_index EQUAL -1)
+        list(APPEND CMAKE_PREFIX_PATH "$ENV{MINGW_PREFIX}")
+      endif()
+    endif()
+  endif()
+
   find_package(SDL2 CONFIG QUIET)
   find_package(SDL2_image CONFIG QUIET)
   find_package(SDL2_ttf CONFIG QUIET)
@@ -56,9 +65,16 @@ if(ERKAO_GRAPHICS)
   else()
     message(STATUS "SDL2 not found - graphics module disabled")
     message(STATUS "  SDL2::SDL2 found: $<TARGET_EXISTS:SDL2::SDL2>")
-    message(STATUS "  To enable graphics, install SDL2:")
-    message(STATUS "    Windows: .\\scripts\\install-sdl2.ps1")
-    message(STATUS "    macOS/Linux: ./scripts/install-sdl2.sh")
+    if(WIN32)
+      message(STATUS "  Windows tips:")
+      message(STATUS "    MSYS2: use the UCRT64 shell and configure with -DCMAKE_PREFIX_PATH=/ucrt64")
+      message(STATUS "           or run: cmake --preset msys2-debug")
+      message(STATUS "    MSVC: use vcpkg and configure with -DCMAKE_TOOLCHAIN_FILE=.../vcpkg.cmake")
+      message(STATUS "           or run: cmake --preset msvc-debug")
+    else()
+      message(STATUS "  To enable graphics, install SDL2:")
+      message(STATUS "    macOS/Linux: ./scripts/install-sdl2.sh")
+    endif()
     set(ERKAO_GRAPHICS OFF)
   endif()
 endif()
