feat: treat warnings as errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ set(CMAKE_C_STANDARD_REQUIRED ON)
 option(ERKAO_GRAPHICS "Enable graphics module (requires SDL2)" ON)
 option(ERKAO_SANITIZERS "Enable ASAN/UBSAN" OFF)
 option(ERKAO_FUZZ "Build libFuzzer targets" OFF)
+option(ERKAO_WARNINGS "Enable compiler warnings" ON)
+option(ERKAO_WERROR "Treat warnings as errors" OFF)
 
 set(ERKAO_CORE_SOURCES
   src/lexer.c
@@ -40,6 +42,25 @@ set(ERKAO_INCLUDE_DIRS
 )
 
 target_include_directories(erkao PRIVATE ${ERKAO_INCLUDE_DIRS})
+
+function(erkao_apply_warnings target)
+  if(ERKAO_WARNINGS)
+    if(MSVC)
+      target_compile_definitions(${target} PRIVATE _CRT_SECURE_NO_WARNINGS _CRT_NONSTDC_NO_WARNINGS)
+      target_compile_options(${target} PRIVATE /W4)
+      if(ERKAO_WERROR)
+        target_compile_options(${target} PRIVATE /WX)
+      endif()
+    elseif(CMAKE_C_COMPILER_ID MATCHES "Clang|GNU")
+      target_compile_options(${target} PRIVATE -Wall -Wextra)
+      if(ERKAO_WERROR)
+        target_compile_options(${target} PRIVATE -Werror)
+      endif()
+    endif()
+  endif()
+endfunction()
+
+erkao_apply_warnings(erkao)
 
 if(ERKAO_GRAPHICS)
   if(WIN32)
@@ -128,6 +149,7 @@ if(ERKAO_FUZZ)
   target_compile_definitions(erkao_fuzz_lexer PRIVATE ERKAO_HAS_GRAPHICS=0)
   target_compile_options(erkao_fuzz_lexer PRIVATE ${ERKAO_FUZZ_FLAGS})
   target_link_options(erkao_fuzz_lexer PRIVATE ${ERKAO_FUZZ_FLAGS})
+  erkao_apply_warnings(erkao_fuzz_lexer)
   erkao_link_libs(erkao_fuzz_lexer)
 
   add_executable(erkao_fuzz_parser fuzz/fuzz_parser.c ${ERKAO_CORE_SOURCES})
@@ -135,6 +157,7 @@ if(ERKAO_FUZZ)
   target_compile_definitions(erkao_fuzz_parser PRIVATE ERKAO_HAS_GRAPHICS=0)
   target_compile_options(erkao_fuzz_parser PRIVATE ${ERKAO_FUZZ_FLAGS})
   target_link_options(erkao_fuzz_parser PRIVATE ${ERKAO_FUZZ_FLAGS})
+  erkao_apply_warnings(erkao_fuzz_parser)
   erkao_link_libs(erkao_fuzz_parser)
 
   add_executable(erkao_fuzz_runtime fuzz/fuzz_runtime.c ${ERKAO_CORE_SOURCES})
@@ -142,5 +165,6 @@ if(ERKAO_FUZZ)
   target_compile_definitions(erkao_fuzz_runtime PRIVATE ERKAO_HAS_GRAPHICS=0)
   target_compile_options(erkao_fuzz_runtime PRIVATE ${ERKAO_FUZZ_FLAGS})
   target_link_options(erkao_fuzz_runtime PRIVATE ${ERKAO_FUZZ_FLAGS})
+  erkao_apply_warnings(erkao_fuzz_runtime)
   erkao_link_libs(erkao_fuzz_runtime)
 endif()
