--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,17 +30,17 @@ jobs:
       - name: Configure (Windows)
         if: runner.os == 'Windows'
         shell: pwsh
-        run: cmake -S . -B build
+        run: cmake -S . -B build -DERKAO_WERROR=ON
 
       - name: Configure (Linux)
         if: runner.os == 'Linux'
         shell: pwsh
-        run: cmake -S . -B build -DCMAKE_BUILD_TYPE=Debug
+        run: cmake -S . -B build -DCMAKE_BUILD_TYPE=Debug -DERKAO_WERROR=ON
 
       - name: Configure (macOS)
         if: runner.os == 'macOS'
         shell: pwsh
-        run: cmake -S . -B build -DCMAKE_BUILD_TYPE=Debug -DCMAKE_PREFIX_PATH=$(brew --prefix curl)
+        run: cmake -S . -B build -DCMAKE_BUILD_TYPE=Debug -DCMAKE_PREFIX_PATH=$(brew --prefix curl) -DERKAO_WERROR=ON
 
       - name: Build (Windows)
         if: runner.os == 'Windows'
@@ -86,7 +86,7 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y libcurl4-openssl-dev
 
       - name: Configure (ASAN/UBSAN)
-        run: cmake -S . -B build-sanitize -DERKAO_GRAPHICS=OFF -DERKAO_SANITIZERS=ON -DCMAKE_BUILD_TYPE=Debug -DCMAKE_C_COMPILER=clang
+        run: cmake -S . -B build-sanitize -DERKAO_GRAPHICS=OFF -DERKAO_SANITIZERS=ON -DERKAO_WERROR=ON -DCMAKE_BUILD_TYPE=Debug -DCMAKE_C_COMPILER=clang
 
       - name: Build (ASAN/UBSAN)
         run: cmake --build build-sanitize
@@ -109,7 +109,7 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y libcurl4-openssl-dev
 
       - name: Configure (fuzz)
-        run: cmake -S . -B build-fuzz -DERKAO_GRAPHICS=OFF -DERKAO_FUZZ=ON -DCMAKE_BUILD_TYPE=Debug -DCMAKE_C_COMPILER=clang
+        run: cmake -S . -B build-fuzz -DERKAO_GRAPHICS=OFF -DERKAO_FUZZ=ON -DERKAO_WERROR=ON -DCMAKE_BUILD_TYPE=Debug -DCMAKE_C_COMPILER=clang
 
       - name: Build (fuzz)
         run: cmake --build build-fuzz
