--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -146,7 +146,7 @@ if(ERKAO_FUZZ)
 
   add_executable(erkao_fuzz_lexer fuzz/fuzz_lexer.c ${ERKAO_CORE_SOURCES})
   target_include_directories(erkao_fuzz_lexer PRIVATE ${ERKAO_INCLUDE_DIRS})
-  target_compile_definitions(erkao_fuzz_lexer PRIVATE ERKAO_HAS_GRAPHICS=0)
+  target_compile_definitions(erkao_fuzz_lexer PRIVATE ERKAO_HAS_GRAPHICS=0 ERKAO_FUZZING=1)
   target_compile_options(erkao_fuzz_lexer PRIVATE ${ERKAO_FUZZ_FLAGS})
   target_link_options(erkao_fuzz_lexer PRIVATE ${ERKAO_FUZZ_FLAGS})
   erkao_apply_warnings(erkao_fuzz_lexer)
@@ -154,7 +154,7 @@ if(ERKAO_FUZZ)
 
   add_executable(erkao_fuzz_parser fuzz/fuzz_parser.c ${ERKAO_CORE_SOURCES})
   target_include_directories(erkao_fuzz_parser PRIVATE ${ERKAO_INCLUDE_DIRS})
-  target_compile_definitions(erkao_fuzz_parser PRIVATE ERKAO_HAS_GRAPHICS=0)
+  target_compile_definitions(erkao_fuzz_parser PRIVATE ERKAO_HAS_GRAPHICS=0 ERKAO_FUZZING=1)
   target_compile_options(erkao_fuzz_parser PRIVATE ${ERKAO_FUZZ_FLAGS})
   target_link_options(erkao_fuzz_parser PRIVATE ${ERKAO_FUZZ_FLAGS})
   erkao_apply_warnings(erkao_fuzz_parser)
@@ -162,7 +162,7 @@ if(ERKAO_FUZZ)
 
   add_executable(erkao_fuzz_runtime fuzz/fuzz_runtime.c ${ERKAO_CORE_SOURCES})
   target_include_directories(erkao_fuzz_runtime PRIVATE ${ERKAO_INCLUDE_DIRS})
-  target_compile_definitions(erkao_fuzz_runtime PRIVATE ERKAO_HAS_GRAPHICS=0)
+  target_compile_definitions(erkao_fuzz_runtime PRIVATE ERKAO_HAS_GRAPHICS=0 ERKAO_FUZZING=1)
   target_compile_options(erkao_fuzz_runtime PRIVATE ${ERKAO_FUZZ_FLAGS})
   target_link_options(erkao_fuzz_runtime PRIVATE ${ERKAO_FUZZ_FLAGS})
   erkao_apply_warnings(erkao_fuzz_runtime)
