--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -153,8 +153,16 @@ jobs:
           GH_REPO: ${{ github.repository }}
         run: |
           shopt -s globstar
+          files=()
+          while IFS= read -r -d '' file; do
+            files+=("$file")
+          done < <(find dist -type f -name 'erkao-*' -print0)
+          if [ "${#files[@]}" -eq 0 ]; then
+            echo "No release assets found in dist/"
+            exit 1
+          fi
           if gh release view "${GITHUB_REF_NAME}" --repo "$GH_REPO" >/dev/null 2>&1; then
-            gh release upload "${GITHUB_REF_NAME}" dist/**/erkao-* --repo "$GH_REPO" --clobber
+            gh release upload "${GITHUB_REF_NAME}" "${files[@]}" --repo "$GH_REPO" --clobber
           else
-            gh release create "${GITHUB_REF_NAME}" dist/**/erkao-* --repo "$GH_REPO" --generate-notes
+            gh release create "${GITHUB_REF_NAME}" "${files[@]}" --repo "$GH_REPO" --generate-notes
           fi
