--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -145,6 +145,8 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           path: dist
+          merge-multiple: true
+          pattern: erkao-*
 
       - name: Create release
         shell: bash
