feat: add struct, defer, ffi, new string concatening

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,6 +133,11 @@ function(erkao_link_libs target)
       target_include_directories(${target} PRIVATE ${CURL_INCLUDE_DIRS})
       target_link_libraries(${target} dl m ${CURL_LIBRARIES})
     endif()
+    if(APPLE)
+      target_link_options(${target} PRIVATE "-Wl,-export_dynamic")
+    else()
+      target_link_options(${target} PRIVATE "-rdynamic")
+    endif()
   endif()
 endfunction()
 
